--- a/src/pages/DepartmentList/DepartmentList.scss
+++ b/src/pages/DepartmentList/DepartmentList.scss
@@ -1,21 +1,21 @@
 .specification-list-page {
 }
-.onHover :hover {
-    transition: 0.8s;
-    color: rgb(255, 215, 0);
-    zoom: 1;
-    transform: scale(1.2);
-    .icon {
-      zoom: 1.5;
-      transform: scale(1.4);
-      transition: 0.8s;
-      color: rgb(255, 215, 0)
-    }
-  }
-  .issue :hover {
-    transition: 0.5s;
-    color: black;
-    zoom: 1;
-    transform: scale(1.2);
-  }
+// .onHover :hover {
+//     transition: 0.8s;
+//     color: rgb(255, 215, 0);
+//     zoom: 1;
+//     transform: scale(1.2);
+//     .icon {
+//       zoom: 1.5;
+//       transform: scale(1.4);
+//       transition: 0.8s;
+//       color: rgb(237, 5, 5)
+//     }
+//   }
+//   .issue :hover {
+//     transition: 0.5s;
+//     color: black;
+//     zoom: 1;
+//     transform: scale(1.2);
+//   }
   
