--- a/src/pages/EmployeeList/EmployeeList.scss
+++ b/src/pages/EmployeeList/EmployeeList.scss
@@ -1,23 +1,23 @@
 .device-list-page {
 }
 
-.onHover :hover {
-    transition: 0.8s;
-    color: rgb(255, 215, 0);
-    zoom: 1.2;
-    transform: scale(1.08);
-    .icon {
-      zoom: 1.5;
-      transform: scale(1.4);
-      transition: 0.8s;
-      color: rgb(255, 215, 0)
-    }
-  }
+// .onHover :hover {
+//     transition: 0.8s;
+//     color: rgb(255, 215, 0);
+//     zoom: 1.2;
+//     transform: scale(1.08);
+//     .icon {
+//       zoom: 1.5;
+//       transform: scale(1.4);
+//       transition: 0.8s;
+//       color: rgb(255, 215, 0)
+//     }
+//   }
   
-  .issue :hover {
-    transition: 1.2s;
-    color: black;
-    zoom: 1;
-    transform: scale(1.2);
-  }
+//   .issue :hover {
+//     transition: 1.2s;
+//     color: black;
+//     zoom: 1;
+//     transform: scale(1.2);
+//   }
   
